# omni-player

./: .eslintrc-auto-import.json  .gitignore  README.md  auto-imports.d.ts  components.d.ts  eslint.config.ts  index.html  package.json  player-file.html  player-media.html  player-network.html  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.aiassistant/rules/: openlist.md
.github/workflows/: release.yaml.yml
@xiaohei-plugin/: README.md
@xiaohei-plugin/http-client/: components.d.ts
src/: App.vue  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json  player.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-utools/: index.js  inject.js  package.json  plugin.json  test.html
src-utools/plugins/: plugin-fs.js  plugin-path.js  plugin-sql.js  plugin-store.js  plugin-webview.js
src/entity/: FileServer.ts  FusedMediaItem.ts  GlobalSetting.ts  MediaServer.ts  NetworkServer.ts
src/global/: CommonType.ts  Constants.ts  LocalName.ts  TableName.ts
src/hooks/: ColorMode.ts  index.ts  (+3 more)
tauri-plugin-homebrew/: Cargo.toml  build.rs  package.json
tauri-plugin-homebrew/guest-js/: index.ts
tauri-plugin-homebrew/permissions/: default.toml
tauri-plugin-homebrew/permissions/autogenerated/: reference.md
tauri-plugin-homebrew/permissions/autogenerated/commands/: cancel_operation.toml  search.toml  uninstall.toml  upgrade.toml
tauri-plugin-homebrew/permissions/schemas/: schema.json
tauri-plugin-homebrew/src/: commands.rs  desktop.rs  lib.rs  utils.rs
(+311 files in other folders)
